--- a/locales/ca/LC_MESSAGES/main.po
+++ b/locales/ca/LC_MESSAGES/main.po
@@ -1,19 +1,19 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2020-01-17 11:51-0500\n"
-"PO-Revision-Date: 2020-01-17 11:52-0500\n"
+"POT-Creation-Date: 2020-01-17 11:54-0500\n"
+"PO-Revision-Date: 2020-01-17 11:55-0500\n"
 "Last-Translator: \n"
 "Language-Team: \n"
-"Language: es_ES\n"
+"Language: ca_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 2.0.6\n"
 "X-Poedit-Basepath: ../../..\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Poedit-SearchPath-0: partials\n"
-"X-Poedit-SearchPath-1: templates\n"
+"X-Poedit-SearchPath-0: templates\n"
+"X-Poedit-SearchPath-1: partials\n"
 "X-Poedit-SearchPath-2: views\n"
 "X-Poedit-SearchPath-3: index.php\n"
 "X-Poedit-SearchPath-4: templates.php\n"
@@ -21,12 +21,12 @@ msgstr ""
 #: partials/header_partial.php:7
 #: templates.php/fa/fa47848992a6a05205afe55e5dac943f9970a6ab58ebeafcc705d638064460a5.php:46
 msgid "Foro Programacion"
-msgstr "Foro Programacion"
+msgstr "Foro Programació"
 
 #: templates.php/fa/fa47848992a6a05205afe55e5dac943f9970a6ab58ebeafcc705d638064460a5.php:61
 msgid "Iniciar Sesión"
-msgstr "Iniciar Sesión"
+msgstr "Iniciar Sessió"
 
 #: templates.php/fa/fa47848992a6a05205afe55e5dac943f9970a6ab58ebeafcc705d638064460a5.php:72
 msgid "Registro"
-msgstr "Registro"
+msgstr "Registre"
